Enunciado de 2019/2/MAT162/9.5

--- a/2019/2/MAT162/9.5/enunciado.tex
+++ b/2019/2/MAT162/9.5/enunciado.tex
@@ -116,5 +116,35 @@
 \end{center}
 
 \begin{preguntas}
+\item Determina si la siguiente serie converge o diverge
+$$\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$$
+\item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
+\end{tasks}
+\item Determine el radio y los intervalos de convergencia de las siguientes series
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n-1}(x+3)^n}{3n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{2(x-4)^n}{n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(x-2)^n}{2^{n+1}}$
+\end{tasks}
+\item Escribir las siguientes funciones como una serie de potencias
+\begin{tasks}(2)
+\task $f(x) = \dfrac{1}{x^2-4x+20}$
+\task $f(x) = ln(1+x)$
+\end{tasks}
+\item Expresar las siguientes series de potencias como una función
+\begin{tasks}(2)
+\task $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
+\task $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
+\task $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}$
+\task $\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$
+\end{tasks}
+\item Determinar, utilizando series de potencias, el valor de
+	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
+\item Determinar el valor de la siguiente serie
+	$$ \sum\limits_{n=2}^{\infty}\dfrac{n^2+n}{3^{n-1}} $$
 \end{preguntas}
 \end{document}
