--- a/2019/2/MAT162/9.5/solucion.tex
+++ b/2019/2/MAT162/9.5/solucion.tex
@@ -116,5 +116,329 @@
 \end{center}
 
 \begin{preguntas}
+\item Determina si la siguiente serie converge o diverge
+$$\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$$
+\begin{solucion}
+$\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$\\
+			\\
+			Recordemos que en el infinito,
+			$$n^n > n! > a^n > n^a > ln(n)$$
+			El límite de la sucesión es
+			$$\lim\limits_{n\ra\infty}\dfrac{n!}{n^n} = 0$$
+			Usando el criterio de la razón,
+			$$\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}
+			= \lim\limits_{n \ra \infty} \dfrac{\dfrac{(n+1)!}{(n+1)^{n+1}}}{\dfrac{n!}{n^n}}
+			= \lim\limits_{n \ra \infty} \dfrac{(n+1)!}{n!}\dfrac{n^n}{(n+1)^{n+1}}$$
+			$$= \lim\limits_{n \ra \infty} \dfrac{(n+1)}{1}\dfrac{n^n}{(n+1)^{n+1}}
+			= \lim\limits_{n \ra \infty} \dfrac{n^n}{(n+1)^{n}}
+			= \lim\limits_{n \ra \infty} \left(\dfrac{n}{n+1}\right)^n$$
+			$$= \lim\limits_{n \ra \infty} \dfrac{1}{\left(\dfrac{n+1}{n}\right)^n}
+			= \dfrac{1}{e} < 1$$
+			Por criterio de la razón, la serie es convergente.
+\end{solucion}
+\item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$\\
+			\\
+			Veamos el límite de la sucesión,
+			$$\lim_{n\ra\infty} |a_n| = \lim_{n\ra\infty} \dfrac{1}{\sqrt[]{n}} = 0$$
+			Además, notemos que 
+			$$\dfrac{1}{\sqrt[]{n}} > \dfrac{1}{\sqrt[]{n+1}} \ra \dfrac{1}{n} > \dfrac{1}{n+1} \ra n < n+1$$
+			Por lo que la sucesión es decreciente.\\
+			\\
+			Dicho esto, por el criterio de Leibniz, la serie converge.\\
+			\\
+			Veamos ahora que pasa con la serie no alternante 
+			$$\sum\limits_{n=1}^{\infty}\dfrac{1}{\sqrt[]{n}} = \sum\limits_{n=1}^{\infty}\dfrac{1}{n^{1/2}}$$
+			Es una serie-p con $p<1$, por lo que es divergente.\\
+			\\
+			Finalmente, la serie converge condicionalmente.
+\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$\\
+			\\
+			Veamos el límite de la sucesión,
+			$$\lim_{n\ra\infty} |a_n| = \lim_{n\ra\infty} \dfrac{2n-1}{(\sqrt[]{2})^n} = 0$$
+			Usando el criterio de la razón,
+			$$\lim\limits_{n \ra \infty} \left|\dfrac{a_{n+1}}{a_n}\right|
+			= \lim\limits_{n \ra \infty} \dfrac{2n+2-1}{(\sqrt[]{2})^{\cancel{n+1}}} \cdot \dfrac{(\cancel{\sqrt[]{2})^n}}{2n-1}
+			= \lim\limits_{n \ra \infty} \dfrac{2n+1}{(2n-1)(\sqrt[]{2})} = \dfrac{1}{\sqrt[]{2}} < 1$$
+			Por lo tanto, la serie no alternante converge, lo que implica que la alternante también. En conclusióm, la serie converge absolutamente.
+\item $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$\\
+			\\
+			Veamos el límite de la sucesión,
+			$$\lim_{n\ra\infty} |a_n| = \lim_{n\ra\infty}\dfrac{(n+1)}{n} = 1 \neq 0$$
+			Por la prueba de la divergencia, la serie es divergente.
+\end{enumerate}
+\end{solucion}
+\item Determine el radio y los intervalos de convergencia de las siguientes series
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n-1}(x+3)^n}{3n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{2(x-4)^n}{n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(x-2)^n}{2^{n+1}}$
+\end{tasks}
+\begin{solucion}
+Sea $\sum\limits_{n=1}^{\infty} a_n (x-c)^n$ una serie de potencias, existen dos métodos para obtener el intervalo y radio de convergencia.\\
+
+El primer método para obtener el intervalo es notando que la serie sera convergente siempre que
+$$\lim\limits_{n \ra \infty} \left|\dfrac{a_{n+1}}{a_n}\right| < 1$$
+Los bordes debemos evaluarlos de manera individual y el radio será la mitad del largo del intervalo.\\
+Notemos que en este caso debemos incluir $(x-c)^n$ en el término general.\\
+\\
+El segundo método (en mi opinión más facil) consiste en notar que el centro del intervalo siempre será $c$ y que el radio cumple con
+$$\dfrac{1}{R} = \lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}$$
+Luego, igual que antes, se evaluan los bordes de manera indiviual. Estos serán $c-R$ y $c+R$.
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n-1}(x+3)^n}{3n}$\\
+\\
+Para que la serie converga, debe ocurrir que
+$$\lim\limits_{n \ra \infty} \left|\dfrac{a_{n+1}}{a_n}\right| < 1$$
+$$\lim\limits_{n \ra \infty} \left|\dfrac{(x+3)^{n+1}}{3n+3}\dfrac{3n}{(x+3)^n}\right| < 1$$
+$$|x+3| < 1$$
+$$-1 < x+3 < 1$$
+$$-4 < x < -2$$
+De aqui podemos ver que el radio de convergencia es 1. Para determinar el intervalo de convergencia debemos ver que ocurre en los bordes.
+
+\begin{itemize}
+	\item $x = -4$\\
+	\\
+	$\sum\limits_{n=1}^{\infty}(-1)^{n-1}\dfrac{(-1)^n}{3n}
+	= \sum\limits_{n=1}^{\infty}-\dfrac{1}{3n} 
+	= -\dfrac{1}{3n} \sum\limits_{n=1}^{\infty}\dfrac{1}{n} 
+	\ra \text{diverge}
+	$
+	\item $x = -2$\\
+	\\
+	$\sum\limits_{n=1}^{\infty}(-1)^{n-1}\dfrac{1}{3n}
+	= \dfrac{1}{3} \sum\limits_{n=1}^{\infty}(-1)^{n-1}\dfrac{1}{n}
+	\ra \text{converge por Leibniz}
+	$
+\end{itemize}
+Finalmente, el intervalo de convergencia es $]-4, 2]$ y su radio de convergencia es 1.
+\item $\sum\limits_{n=2}^{\infty}\dfrac{2(x-4)^n}{n}$\\
+\\
+$$\dfrac{1}{R} = \lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}
+= \lim\limits_{n \ra \infty} \dfrac{2}{n+1}\dfrac{n}{2} = 1 \ra R = 1$$
+Notemos que el centro es $4$, por lo que debemos evaluar en $x=3$ y $x=5$.
+\begin{itemize}
+	\item $x=3$\\
+	\\
+	$\sum\limits_{n=2}^{\infty}(-1)^n\dfrac{2}{n} \ra \text{converge por Leibniz}$	\item $x=5$\\
+	\\
+	$\sum\limits_{n=2}^{\infty}\dfrac{2}{n} \ra \text{diverge}$
+\end{itemize}
+Finalmente, el intervalo es $[3,5[$
+\item $\sum\limits_{n=2}^{\infty}\dfrac{2(x-4)^n}{n}$\\
+\\
+$$\dfrac{1}{R} = \lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}
+= \lim\limits_{n \ra \infty} \dfrac{2}{n+1}\dfrac{n}{2} = 1 \ra R = 1$$
+Notemos que el centro es $4$, por lo que debemos evaluar en $x=3$ y $x=5$.
+\begin{itemize}
+	\item $x=3$\\
+	\\
+	$\sum\limits_{n=2}^{\infty}(-1)^n\dfrac{2}{n} \ra \text{converge por Leibniz}$	\item $x=5$\\
+	\\
+	$\sum\limits_{n=2}^{\infty}\dfrac{2}{n} \ra \text{diverge}$
+\end{itemize}
+Finalmente, el intervalo es $[3,5[$
+\item $\sum\limits_{n=2}^{\infty}\dfrac{(x-2)^n}{2^{n+1}}$\\
+\\
+$$\dfrac{1}{R} = \lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}
+= \lim\limits_{n \ra \infty} \dfrac{1}{2^{n+2}}\dfrac{2^{n+1}}{1} = \dfrac{1}{2} \ra R = 2$$
+Notemos que el centro es $2$, por lo que debemos evaluar en $x=0$ y $x=4$.
+\begin{itemize}
+	\item $x=0$\\
+	\\
+	$\sum\limits_{n=2}^{\infty}\dfrac{(-2)^n}{2^{n+1}} = \sum\limits_{n=2}^{\infty}(-1)^n\dfrac{2^n}{2^{n+1}} = \sum\limits_{n=2}^{\infty}(-1)^n\dfrac{1}{2} \ra \text{divergente}$
+	\item $x=4$\\
+	\\
+	$\sum\limits_{n=2}^{\infty}\dfrac{2^n}{2^{n+1}} = \sum\limits_{n=2}^{\infty}\dfrac{1}{2} \ra \text{divergente}$
+\end{itemize}
+Finalmente, el intervalo de convergencia corresponde a $]0, 4[$.
+\end{enumerate}
+\end{solucion}
+\item Escribir las siguientes funciones como una serie de potencias
+\begin{tasks}(2)
+\task $f(x) = \dfrac{1}{x^2-4x+20}$
+\task $f(x) = ln(1+x)$
+\end{tasks}
+\begin{solucion}
+Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
+\begin{enumerate}[a)]
+\item $f(x) = \dfrac{1}{x^2-4x+20}$\\
+\\
+Debemos reescribir la función para que se asemeje a la formula de más arriba. Para esto, debemos completar cuadrados, esto es
+$$f(x) = \dfrac{1}{x^2-4x+20}
+= \dfrac{1}{16 + (x^2-4x+4)}
+= \dfrac{1}{16 + (x-2)^2}$$
+Ahora, debemos convertir el 16 en un 1, para esto, basta con factorizar, es decir
+$$ f(x)
+= \dfrac{1}{16 + (x-2)^2}
+= \dfrac{1}{16}\cdot \dfrac{1}{1 + \frac{(x-2)^2}{16}}
+= \dfrac{1}{16} \cdot\dfrac{1}{1 + \left(\frac{x-2}{4}\right)^2}
+$$
+Por último, necesitamos un signo menos luego del 1.
+$$ f(x)
+= \dfrac{1}{16} \cdot\dfrac{1}{1 + \left(\frac{x-2}{4}\right)}
+= \dfrac{1}{16} \cdot\dfrac{1}{1 + \left(-\left(\frac{x-2}{4}\right)^2\right)}
+$$
+Aplicando la formula,
+$$ f(x)
+= \dfrac{1}{16} \cdot\dfrac{1}{1 + \left(-\left(\frac{x-2}{4}\right)^2\right)}
+= \sum\limits_{n=0}^{\infty} \left(-\left(\frac{x-2}{4}\right)^2\right)^n
+= \sum\limits_{n=0}^{\infty} (-1)^n \dfrac{(x-2)^{2n}}{16^n}
+$$
+\item $f(x) = ln(1+x)$\\
+\\
+Es evidente que no podemos convertir la función directamente a una serie, por lo que probaremos derivandola antes.
+		$$f'(x) = \dfrac{1}{1+x}$$
+		Esta función si podemos convertirla en una serie usando $\dfrac{1}{1-x} = \sum\limits_{n=0}^{\infty} x^n$. Entonces,
+		$$f'(x) = \dfrac{1}{1-(-x)} 
+		= \sum\limits_{n=0}^{\infty} (-x)^n
+		= \sum\limits_{n=0}^{\infty} (-1)^n x^n$$
+		Lo único que nos queda por hacer es integrar esto. Recordemos que para integrar una serie de potencias, basta con integrar su termino general.
+		
+		Finalmente, 
+		$$f(x) 
+		= \int f'(x) dx
+		= \int \sum\limits_{n=0}^{\infty} (-1)^n x^n dx
+		= \sum\limits_{n=0}^{\infty} \int (-1)^n x^n dx
+		= \sum\limits_{n=0}^{\infty} (-1)^n \dfrac{x^{n+1}}{n+1}$$
+\end{enumerate}
+\end{solucion}
+\item Expresar las siguientes series de potencias como una función
+\begin{tasks}(2)
+\task $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
+\task $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
+\task $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}$
+\task $\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$
+\end{tasks}
+\begin{solucion}
+
+	Para hacer esto debemos seguir los siguientes pasos
+	\begin{itemize}
+		\item Hacer que la serie comience del 0
+		\item Mover todo hacia afuera de tal forma de que todos los exponentes sean $n$
+		\item Aplicar $\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$
+		\item Simplificar
+	\end{itemize}
+\begin{enumerate}[a)]
+\item $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}
+= \sum\limits_{n=0}^\infty \dfrac{x^{n+2}}{2^{n+1}}
+= \dfrac{x^2}{2} \sum\limits_{n=0}^\infty \left(\dfrac{x}{2}\right)^n
+= \dfrac{x^2}{2} \dfrac{1}{1-\frac{x}{2}}
+= \dfrac{x^2}{2-x}
+$
+\item $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}
+= \sum\limits_{n=0}^\infty \dfrac{(-1)^{n+1} (3x+1)^{n}}{5^{n+1}}
+= -\dfrac{1}{5} \sum\limits_{n=0}^\infty \dfrac{(-1)^{n} (3x+1)^{n}}{5^{n}}$\\
+$
+= -\dfrac{1}{5} \sum\limits_{n=0}^\infty \left(\dfrac{-(3x+1)}{5}\right)^n
+= -\dfrac{1}{5} \cdot \dfrac{1}{1-\left(\frac{-(3x+1)}{5}\right)}
+= \dfrac{-1}{3x+6}
+$
+\item $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}
+= \sum\limits_{n=0}^\infty \left(\dfrac{x^2}{4}\right)^n
+= \dfrac{1}{1-\frac{x}{4}}
+= \dfrac{4}{4-x^2}	
+$
+\item Sea 
+		$$f(x) = \sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$$
+		En este caso, lo que nos molesta es el $n$ del denominador, por lo que intentaremos derivando la serie. De manera análoga, para hacer esto solo tenemos que derivar el término general de esta, esto es,
+		$$f'(x) 
+		= \sum\limits_{n=1}^\infty \dfrac{n(2x-3)^{n-1}\cdot 2}{n2^n}
+		= \sum\limits_{n=1}^\infty \dfrac{(2x-3)^{n-1}}{2^{n-1}}
+		= \sum\limits_{n=1}^\infty \left(x-\dfrac{3}{2}\right)^{n-1}
+		= \sum\limits_{n=0}^\infty \left(x-\dfrac{3}{2}\right)^{n}$$
+		Ahora que no tenemos problema,
+		$$f'(x) 
+		= \dfrac{1}{1-\left(x-\dfrac{3}{2}\right)}
+		= \dfrac{1}{1-x+\dfrac{3}{2}}
+		= \dfrac{1}{\dfrac{5}{2}-x}
+		= \dfrac{1}{\dfrac{5-2x}{2}}
+		= \dfrac{2}{5-2x}$$
+		Integrando,
+		$$f(x) 
+		= \int \dfrac{2}{5-2x} dx
+		= -ln (5-2x) + c$$
+		Para encontrar la constante, debemos evaluar la función en un punto donde conozcamos el valor de la serie que representa. La opción trivial es evaluarla donde el termino general se hacer cero, esto sería en $x = \dfrac{3}{2}$. Aquí,
+		$$f\left(\dfrac{3}{2}\right) = \sum\limits_{n=1}^\infty 0 = 0$$
+		Luego,
+		$$f\left(\dfrac{3}{2}\right) = -ln(5-3) + c = 0 \ra c = ln(2)$$
+		Finalmente,
+		$$f(x) = -ln(5-2x) + ln(2) = ln\left(\dfrac{2}{5-2x}\right)$$
+\end{enumerate}
+\end{solucion}
+\item Determinar, utilizando series de potencias, el valor de
+	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
+\begin{solucion}
+Recordemos que $$\dfrac{1}{1-x} = \sum\limits_0^{\infty} x^n$$
+		Luego, debemos buscar una serie de potencias que se asemeje a lo que estamos buscando, esta sería
+		$$f(x) = \sum\limits_{n=1}^\infty x^{n}$$
+		Entonces, debemos encontrar $f\left(\dfrac{1}{3}\right)$
+		
+		Tenemos que
+		$$f(x) 
+		= \sum\limits_{n=1}^\infty x^{n} 
+		= \sum\limits_{n=0}^\infty x^{n+1}
+		= x\sum\limits_{n=0}^\infty x^{n}
+		= x \dfrac{1}{1-x}
+		= \dfrac{x}{1-x}$$
+		Como $x = \dfrac{1}{3}$ esta dentro del radio de convergencia de la serie, podremos evaluar la seríe ahí. Finalmente,
+		$$\sum\limits_{n=1}^\infty \frac{1}{3^n} = f\left(\dfrac{1}{3}\right) = \dfrac{\dfrac{1}{3}}{1-\dfrac{1}{3}}
+		= \dfrac{\dfrac{1}{3}}{\dfrac{2}{3}} = \dfrac{1}{2}$$
+\end{solucion}
+\item Determinar el valor de la siguiente serie
+	$$ \sum\limits_{n=2}^{\infty}\dfrac{n^2+n}{3^{n-1}} $$
+\begin{solucion}
+En primer lugar, notemos que la serie se puede escribir como
+$$ \sum\limits_{n=2}^{\infty}\dfrac{n(n+1)}{3^{n-1}} $$
+Lo que nos da problema es el $n(n+1)$, sin embargo, notemos que este esta en el numerador, por lo que debemos convertir la serie en una serie de potencias apropiada para poder integrarla.	\\
+\\
+Sea
+$$f(x) = \sum\limits_{n=2}^{\infty}\dfrac{n(n+1)}{3^{n-1}} x^{n-1} $$
+Debemos encontrar el valor de $f(1)$\\
+
+Integramos,
+$$\int f(x)dx 
+= \sum\limits_{n=2}^{\infty}\dfrac{\cancel{n}(n+1)}{3^{n-1}} \dfrac{x^n}{\cancel{n}} 
+= \sum\limits_{n=2}^{\infty}\dfrac{n+1}{3^{n-1}} x^n$$
+Integramos  nuevamente,
+$$\iint f(x)dxdx 
+= \sum\limits_{n=2}^{\infty}\dfrac{\cancel{n+1}}{3^{n-1}} \dfrac{x^{n+1}}{\cancel{n+1}} 
+= \sum\limits_{n=2}^{\infty}\dfrac{x^{n+1}}{3^{n-1}}$$
+Notemos que
+$$\sum\limits_{n=2}^{\infty}\dfrac{x^{n+1}}{3^{n-1}}
+= \sum\limits_{n=0}^{\infty}\dfrac{x^{n+3}}{3^{n+1}}
+= \dfrac{x^3}{3}\sum\limits_{n=0}^{\infty}\left(\dfrac{x}{3}\right)^n
+= \dfrac{x^3}{3}\dfrac{1}{1-\dfrac{x}{3}}
+= \dfrac{x^3}{3-x}$$
+Por lo que
+$$\iint f(x)dxdx 
+= \dfrac{x^3}{3-x}$$
+Derivamos,
+$$\int f(x)dx
+= \left(\dfrac{x^3}{3-x}\right)' 
+= \dfrac{9x^2-2x^3}{(3-x)^2}
+$$
+Derivamos nuevamente,
+$$f(x)
+= \left(\dfrac{9x^2-2x^3}{(3-x)^2}\right)' 
+= \dfrac{(18x-6x^2)(3-x)^2 + 2(3-x)(9x^2-2x^3)}{(3-x)^4}
+$$
+Finalmente,
+$$f(1)
+= \dfrac{(18-6)(3-1)^2 + 2(3-1)(9-2)}{(3-1)^4}
+=\dfrac{19}{4}
+$$
+Por lo que
+$$ \sum\limits_{n=2}^{\infty}\dfrac{n(n+1)}{3^{n-1}} 
+=\dfrac{19}{4}$$
+\end{solucion}
 \end{preguntas}
 \end{document}
