Solución de 2019/2/MAT162/9.5

--- a/2019/2/MAT162/9.5/solucion.tex
+++ b/2019/2/MAT162/9.5/solucion.tex
@@ -119,9 +119,10 @@
 \item Determina si la siguiente serie converge o diverge
 $$\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$$
 \begin{solucion}
-$\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$\\
-			\\
-			Recordemos que en el infinito,
+\begin{center}
+\includegraphics[width=12cm]{../../../../img/mapa_series}
+\end{center}
+Recordemos que en el infinito,
 			$$n^n > n! > a^n > n^a > ln(n)$$
 			El límite de la sucesión es
 			$$\lim\limits_{n\ra\infty}\dfrac{n!}{n^n} = 0$$
