--- a/2019/2/MAT162/9.5/solucion.tex
+++ b/2019/2/MAT162/9.5/solucion.tex
@@ -447,10 +447,50 @@ $$ \sum\limits_{n=2}^{\infty}\dfrac{n(n+1)}{3^{n-1}}
 \task $f(x) = \dfrac{1}{1-x}$
 \end{tasks}
 \begin{solucion}
-
+La serie de Taylor con centro $x_0$ corresponde a
+$$f(x) = \sum_0^{\infty} \dfrac{f^{(n)}(x_0)}{n!}(x-x_0)^n$$
+La serie de Maclaurin corresponde a una serie de Taylor con centro 0.
 \begin{enumerate}[a)]
-\item 
-\item 
+\item $f(x) = cos(x)$\\
+\\
+$$
+\begin{array}{rcrcrcr}
+f(x) & = &\cos(x)&\qquad & f(0) & = &1\\
+f'(x) & =& -\sin(x) &\qquad & f'(0) & = &0\\
+f''(x) & =& -\cos(x) &\qquad & f''(0) & = &-1\\
+f'''(x) & =& \sin(x) &\qquad & f'''(0) & = &0\\
+f''''(x) & =& \cos(x) &\qquad & f''''(0) & =& 1\\
+&\vdots&&&&\vdots
+\end{array}
+$$
+De esta forma, podemos ver que la serie de Taylor será
+$$f(x) = f(0) + \dfrac{f'(0)}{1!}(x-0) + \dfrac{f''(0)}{2!}(x-0)^2 + \dfrac{f'''(0)}{3!}(x-0)^3 + \dots$$
+Reemplazando
+$$f(x) = 1 + \dfrac{0}{1!}x - \dfrac{1}{2!}x^2 + \dfrac{0}{3!}x^3 +\dots$$
+Eliminando los términos nulos, podemos ver que
+$$f(x) = 1 + - \dfrac{x^2}{2!} + \dfrac{x^4}{4!} - \dfrac{x^6}{6!} + \dots$$
+Luego,
+$$cos(x) = \sum_0^{\infty} (-1)^n\dfrac{x^{2n}}{(2n)!}$$
+\item $f(x) = \dfrac{1}{1-x}$\\
+\\
+$$
+\begin{array}{rcrcrcrcr}
+f(x) & = &\dfrac{1}{1-x}&\qquad & f(0) & = &1& = &0!\\
+f'(x) & =& \dfrac{1}{(1-x)^2} &\qquad & f'(0) & = &1& =& 1!\\
+f''(x) & =& \dfrac{2}{(1-x)^3} &\qquad & f''(0) & = &2&=&2!\\
+f'''(x) & =& \dfrac{6}{(1-x)^4} &\qquad & f'''(0) & = &6&=&3!\\
+&\vdots&&&&\vdots\\
+f^{(n)}(x) & =& \dfrac{n!}{(1-x)^n} &\qquad & f^{(n)}(0) & = &n!
+\end{array}
+$$
+De esta forma, podemos ver que la serie de Taylor será
+$$f(x) = f(0) + \dfrac{f'(0)}{1!}(x-0) + \dfrac{f''(0)}{2!}(x-0)^2 + \dfrac{f'''(0)}{3!}(x-0)^3 + \dots$$
+Reemplazando
+$$f(x) = 1 + \dfrac{1!}{1!}x - \dfrac{2!}{2!}x^2 + \dfrac{3!}{3!}x^3 +\dots$$
+Simplificando
+$$f(x) = 1 + x + x^2 + x^3 + \dots$$
+Luego,
+$$\dfrac{1}{1-x} = \sum_0^{\infty} x^n$$
 \end{enumerate}
 \end{solucion}
 \item Encontrar una aproximación de $\sqrt[]{101}$ con un error máximo de $10^{-3}$
