Solución de 2019/2/MAT1620/7

--- a/2019/2/MAT1620/7/solucion.tex
+++ b/2019/2/MAT1620/7/solucion.tex
@@ -240,8 +240,8 @@ $$x = \sqrt[]{2}rcos(\theta), \quad y = \sqrt[]{3}rsen(\theta)$$
 Notemos que con este cambio,
 $$3x^2+2y^2 = 6r^2, \quad (x,y)\ra 0 \Longrightarrow r \ra 0$$
 Luego, debemos resolver el límite
-$$\lim\limits_{r\ra 0} \dfrac{r^4cos^4(\theta)r^3sen^3(\theta)}{6r^2}
-			= \lim\limits_{r\ra 0} \dfrac{1}{6}r^5cos^4(\theta)sen^3(\theta) = 0$$
+$$\lim\limits_{r\ra 0} \dfrac{4r^4cos^4(\theta)3\ \sqrt[]{3}r^3sen^3(\theta)}{6r^2}
+			= \lim\limits_{r\ra 0} \dfrac{12\ \sqrt[]{3}}{6}r^5cos^4(\theta)sen^3(\theta) = 0$$
 			Como las funciones $sen$ y $cos$ son funciones acotadas, por teorema del sandwich concluimos que el límite existe y es cero.\\
 \\
 Finalmente, la función es continua.
@@ -272,8 +272,8 @@ $$x = rcos(\theta), \quad y = \sqrt[]{2}rsen(\theta)$$
 Notemos que con este cambio,
 $$2x^2+y^2 = 2r^2, \quad (x,y)\ra 0 \Longrightarrow r \ra 0$$
 Luego, debemos resolver el límite
-$$\lim\limits_{r\ra 0} \dfrac{r^3cos^3(\theta)r^2sen^2(\theta)}{2r^2}
-			= \lim\limits_{r\ra 0} \dfrac{1}{2}r^3cos^3(\theta)sen^2(\theta) = 0$$
+$$\lim\limits_{r\ra 0} \dfrac{r^3cos^3(\theta)2r^2sen^2(\theta)}{2r^2}
+			= \lim\limits_{r\ra 0} \dfrac{2}{2}r^3cos^3(\theta)sen^2(\theta) = 0$$
 			Como las funciones $sen$ y $cos$ son funciones acotadas, por teorema del sandwich concluimos que el límite existe y es cero.\\
 \\
 Por lo tanto, la función es continua en $\R^2 - (0,0)$.
