Enunciado de 2019/2/MAT1620/9.5

--- a/2019/2/MAT1620/9.5/enunciado.tex
+++ b/2019/2/MAT1620/9.5/enunciado.tex
@@ -116,5 +116,101 @@
 \end{center}
 
 \begin{preguntas}
+\item Determina si la siguiente serie converge o diverge
+$$\sum\limits_{n=1}^{\infty}\dfrac{n!}{n^n}$$
+\item Determine si las siguientes series convergen condicionalmente, absolutamente o divergen.
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n+1}}{\sqrt[]{n}}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(2n-1)}{(\sqrt[]{2})^n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(-1)^{n-1}(n+1)}{n}$
+\end{tasks}
+\item Determine el radio y los intervalos de convergencia de las siguientes series
+\begin{tasks}(3)
+\task $\sum\limits_{n=1}^{\infty}\dfrac{(-1)^{n-1}(x+3)^n}{3n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{2(x-4)^n}{n}$
+\task $\sum\limits_{n=2}^{\infty}\dfrac{(x-2)^n}{2^{n+1}}$
+\end{tasks}
+\item Escribir las siguientes funciones como una serie de potencias
+\begin{tasks}(2)
+\task $f(x) = \dfrac{1}{x^2-4x+20}$
+\task $f(x) = ln(1+x)$
+\end{tasks}
+\item Expresar las siguientes series de potencias como una función
+\begin{tasks}(2)
+\task $\sum\limits_{n=2}^\infty \dfrac{x^n}{2^{n-1}}$
+\task $\sum\limits_{n=1}^\infty \dfrac{(-1)^n (3x+1)^{n-1}}{5^n}$
+\task $\sum\limits_{n=0}^\infty \dfrac{x^{2n}}{4^n}$
+\task $\sum\limits_{n=1}^\infty \dfrac{(2x-3)^n}{n2^n}$
+\end{tasks}
+\item Determinar, utilizando series de potencias, el valor de
+	$$\sum\limits_{n=1}^\infty \frac{1}{3^n}$$
+\item Determinar el valor de la siguiente serie
+	$$ \sum\limits_{n=2}^{\infty}\dfrac{n^2+n}{3^{n-1}} $$
+\item Para cada función, encontrar la serie de Maclaurin que la representa
+\begin{tasks}(2)
+\task $f(x) = cos(x)$
+\task $f(x) = \dfrac{1}{1-x}$
+\end{tasks}
+\item Encontrar una aproximación de $\sqrt[]{101}$ con un error máximo de $10^{-3}$
+\item Determina el dominio de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x, y) = \sqrt[]{x+y} + \ln(x^2+y^2)$
+\task $f(x,y) = \dfrac{x+y}{x^2-y^2}$
+\task $f(x,y,z) = ln(z+y) - \dfrac{1}{x^2 +z^2}$
+\task $f(x,y,z) = \sqrt[]{\ln(x+y+z)}$
+\end{tasks}
+\item Determina el recorrido de las siguientes funciones
+\begin{tasks}(2)
+\task $f(x,y) = x^2 + y^2 + 3$
+\task $f(x,y,z) = \ln(\sqrt[]{x^2+y^2+4}) + z^2$
+\end{tasks}
+\item Grafique las curvas de nivel de la función 
+	$$ f(x,y) = \sqrt[]{9-x^2-y^2}$$
+	para $k=0,1,2,3$
+\item Determinar si los siguientes limites existen o no. En caso de que existan, calcule su valor
+\begin{tasks}(2)
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{5x^2y}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{xy}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{x^2ye^y}{x^4+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{sen(x^2+y^2)}{x^2+y^2}$
+\task $\lim\limits_{(x,y) \to (0,0)} \dfrac{sen(xy)}{xy}$
+\end{tasks}
+\item Dada la función 
+	$$ f(x) = 
+	\begin{cases}
+	\dfrac{x^4y^3}{3x^2+2y^2} & si\ (x,y) \neq (0,0) \\
+	0 & si\ (x,y) = (0,0)
+	\end{cases}
+	$$
+	determinar si es continua en todo $\R^2$ o no.
+\item Determine el conjunto de puntos en los cuales la función es continua
+	$$f(x,y) = 
+	\begin{cases}
+	\dfrac{x^3y^2}{x^2+2y^2} & (x,y) \neq (0,0)\\
+	1 & (x,y) = (0,0)
+	\end{cases}
+	$$
+\item Determine la derivada por definición en $x$ de la función
+	$$f(x,y) = 2xy + x^2y + x + y$$
+\item Para las siguientes funciones, calcular $f_x$ y $f_y$
+\begin{enumerate}[a)]
+\item $f(x,y) = \dfrac{xy}{x-y}$
+\item $f(x,y) = (x^2+y^2)sen\left(\dfrac{1}{x^2+y^2}\right)$
+\end{enumerate}
+\item Una función armónica es aquella que cumple con $f_{xx} + f_{yy} = 0$. Determina si la siguiente funcion es armónica
+	$$f(x,y) = xy + 3x^2 -y^3$$
+\item Busque $\dfrac{\delta z}{\delta t}$ o $\dfrac{\delta w}{\delta t}$, según corresponda.
+\begin{enumerate}[a)]
+\item $z = x^2+y^2+xy$\tab$x=sen(t), y=e^t$
+\item $w=xe^{y/z}$\tab$x=t^2, y=1-t, z=1+2t$
+\item $w=ln(\sqrt[]{x^2+y^2+z^2})$\tab$x=sen(t), y=cos(t), z=tan(t)$
+\end{enumerate}
+\item Sea $f$ una función con segundas derivadas parciales continuas en todo $R^2$. El cambio de variables $x=uv$, $y=\dfrac{u^2-v^2}{2}$ transforma la función $f(x,y)$ en la función $g(u,v)$.
+\begin{enumerate}[a)]
+\item Calcule $\dfrac{\delta g}{\delta u}, \dfrac{\delta g}{\delta v}$ en terminos de las derivadas parciales de $f$.
+\item Si $f_{xx}(x,y) + f_{yy}(x,y) = 2$ para todo $(x,y) \in R^2$, determine las constantes $a,b \in \R$ tales que
+		$$a\dfrac{\delta^2g}{\delta u^2} - b\dfrac{\delta^2 g}{\delta v^2} = u^2 + v^2$$
+\end{enumerate}
 \end{preguntas}
 \end{document}
