Enunciado de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/enunciado.tex
+++ b/2019/2/MAT1620/9/enunciado.tex
@@ -116,5 +116,23 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea la función
+	$$f(x,y)=
+	\begin{cases}
+	\dfrac{xy}{\sqrt[]{x^2+y^2}} & (x,y) \neq (0,0)\\
+	0 & (x,y)=(0,0)
+	\end{cases}
+	$$
+\begin{enumerate}[a)]
+\item Determinar si $f$ es continua en $(0,0)$.
+\item Determinar si $f$ es diferenciable en $(0,0)$.
+\end{enumerate}
+\item Hallar las ecuaciones de los planos tangentes a la superficie $x^2 + 2y^2 + 3z^2 = 21$ que sean paralelos al plano $x + 4y + 6z = 0$.
+\item El cambio de variables 
+	$\begin{cases}
+	x=u+v\\
+	y=uv^2
+	\end{cases}$
+	transforma a $z=f(x,y)$ en $z=g(u,v)$. Calcular el valor de $\dfrac{\delta^2z}{\delta u \delta v}$ en el punto $(u,v) = (1,1)$, sabiendo que en aquel punto se cumple$$\dfrac{\delta f}			{\delta y} = \dfrac{\delta^2 f}{\delta x^2}=\dfrac{\delta^2 f}{\delta y^2}=\dfrac{\delta^2 f}{\delta x \delta y}=\dfrac{\delta^2 f}{\delta y \delta x}=1$$
 \end{preguntas}
 \end{document}
