Enunciado de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/enunciado.tex
+++ b/2019/2/MAT1620/9/enunciado.tex
@@ -134,5 +134,7 @@
 	y=uv^2
 	\end{cases}$
 	transforma a $z=f(x,y)$ en $z=g(u,v)$. Calcular el valor de $\dfrac{\delta^2z}{\delta u \delta v}$ en el punto $(u,v) = (1,1)$, sabiendo que en aquel punto se cumple$$\dfrac{\delta f}			{\delta y} = \dfrac{\delta^2 f}{\delta x^2}=\dfrac{\delta^2 f}{\delta y^2}=\dfrac{\delta^2 f}{\delta x \delta y}=\dfrac{\delta^2 f}{\delta y \delta x}=1$$
+\item Evalúe la integral indefinida como una serie infinita
+	$$\int x\ arctan(3x)dx$$
 \end{preguntas}
 \end{document}
