Solución de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/solucion.tex
+++ b/2019/2/MAT1620/9/solucion.tex
@@ -147,5 +147,10 @@
 \begin{solucion}
 
 \end{solucion}
+\item Evalúe la integral indefinida como una serie infinita
+	$$\int x\ arctan(3x)dx$$
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
