--- a/2019/2/MAT1620/9/solucion.tex
+++ b/2019/2/MAT1620/9/solucion.tex
@@ -116,6 +116,16 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcular la siguiente suma
+	$$1 - ln(2) + \dfrac{(ln2)^2}{2!}-\dfrac{(ln2)^3}{3!}+\cdots$$
+\begin{solucion}
+
+\end{solucion}
+\item Evalúe la integral indefinida como una serie infinita
+	$$\int x\ arctan(3x)dx$$
+\begin{solucion}
+
+\end{solucion}
 \item Sea la función
 	$$f(x,y)=
 	\begin{cases}
@@ -144,11 +154,6 @@
 	y=uv^2
 	\end{cases}$
 	transforma a $z=f(x,y)$ en $z=g(u,v)$. Calcular el valor de $\dfrac{\delta^2z}{\delta u \delta v}$ en el punto $(u,v) = (1,1)$, sabiendo que en aquel punto se cumple$$\dfrac{\delta f}			{\delta y} = \dfrac{\delta^2 f}{\delta x^2}=\dfrac{\delta^2 f}{\delta y^2}=\dfrac{\delta^2 f}{\delta x \delta y}=\dfrac{\delta^2 f}{\delta y \delta x}=1$$
-\begin{solucion}
-
-\end{solucion}
-\item Evalúe la integral indefinida como una serie infinita
-	$$\int x\ arctan(3x)dx$$
 \begin{solucion}
 
 \end{solucion}
