Solución de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/solucion.tex
+++ b/2019/2/MAT1620/9/solucion.tex
@@ -135,11 +135,13 @@
 	$$
 \begin{enumerate}[a)]
 \item Determinar si $f$ es continua en $(0,0)$.
+\item Calcular sus derivadas parciales, en caso de que existan.
 \item Determinar si $f$ es diferenciable en $(0,0)$.
 \end{enumerate}
 \begin{solucion}
 
 \begin{enumerate}[a)]
+\item 
 \item 
 \item 
 \end{enumerate}
