Enunciado de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/enunciado.tex
+++ b/2019/2/MAT1620/9/enunciado.tex
@@ -132,6 +132,7 @@
 \item Calcular sus derivadas parciales, en caso de que existan.
 \item Determinar si $f$ es diferenciable en $(0,0)$.
 \end{enumerate}
+\item Encontrar el plano tangente a la superficie $z = y\cos\left(\dfrac{x}{2}\right)$ en el punto $(\pi, 1, 0)$.
 \item Hallar las ecuaciones de los planos tangentes a la superficie $x^2 + 2y^2 + 3z^2 = 21$ que sean paralelos al plano $x + 4y + 6z = 0$.
 \item El cambio de variables 
 	$\begin{cases}
