Solución de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/solucion.tex
+++ b/2019/2/MAT1620/9/solucion.tex
@@ -146,6 +146,10 @@
 \item 
 \end{enumerate}
 \end{solucion}
+\item Encontrar el plano tangente a la superficie $z = y\cos\left(\dfrac{x}{2}\right)$ en el punto $(\pi, 1, 0)$.
+\begin{solucion}
+
+\end{solucion}
 \item Hallar las ecuaciones de los planos tangentes a la superficie $x^2 + 2y^2 + 3z^2 = 21$ que sean paralelos al plano $x + 4y + 6z = 0$.
 \begin{solucion}
 
