Enunciado de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/enunciado.tex
+++ b/2019/2/MAT1620/9/enunciado.tex
@@ -119,7 +119,7 @@
 \item Calcular la siguiente suma
 	$$1 - ln(2) + \dfrac{(ln2)^2}{2!}-\dfrac{(ln2)^3}{3!}+\cdots$$
 \item Evalúe la integral indefinida como una serie infinita
-	$$\int x\ arctan(3x)dx$$
+	$$\int x\ \arctan(3x)dx$$
 \item Sea la función
 	$$f(x,y)=
 	\begin{cases}
@@ -129,7 +129,7 @@
 	$$
 \begin{enumerate}[a)]
 \item Determinar si $f$ es continua en $(0,0)$.
-\item Calcular sus derivadas parciales, en caso de que existan.
+\item Calcular sus derivadas parciales en $(0,0)$, en caso de que existan.
 \item Determinar si $f$ es diferenciable en $(0,0)$.
 \end{enumerate}
 \item Encontrar el plano tangente a la superficie $z = y\cos\left(\dfrac{x}{2}\right)$ en el punto $(\pi, 1, 0)$.
