--- a/2019/2/MAT1620/9/solucion.tex
+++ b/2019/2/MAT1620/9/solucion.tex
@@ -148,6 +148,11 @@ $$
 = \sum\limits_0^{\infty}(-1)^n \dfrac{9^n}{(2n+1)(2n+3)}x^{2n+3}dx
 $$
 \end{solucion}
+\item Calcule
+$$\int_0^1 \dfrac{1-cos(x)}{x^2}$$
+\begin{solucion}
+
+\end{solucion}
 \item Sea la función
 	$$f(x,y)=
 	\begin{cases}
@@ -212,7 +217,23 @@ Donde $\Pi: 2z + x = \pi$ corresponde al plano tangente.
 \end{solucion}
 \item Hallar las ecuaciones de los planos tangentes a la superficie $x^2 + 2y^2 + 3z^2 = 21$ que sean paralelos al plano $x + 4y + 6z = 0$.
 \begin{solucion}
-
+Cuando no podemos despejar $z$, podemos usar la ecuación general del plano tangente,
+En primer lugar, despejemos $z$, esto es
+$$f_x(x_0,y_0,z_0)(x-x_0) +f_y(x_0,y_0,z_0)(y-y_0) + f_z(x_0,y_0,z_0)(z-z_0)$$
+Sea 
+$$f(x,y,z) = x^2 + 2y^2 + 3z^2 -21$$
+Ahora, calculamos las derivadas, esto es
+$$f_x = 2x \qquad f_y = 4y \qquad f_z = 6z$$
+Para saber en que puntos estan los planos tangentes, hay que notar que las derivadas parciales serán las que definan los coeficientes de nuestro plano tangente y por lo tanto, podemos concluir que el vector normal del plano tangente será
+$$\vec{n} = \begin{pmatrix}2x \\ 4y\\ 6z\end{pmatrix}$$
+Para que este plano sea tangente al plano dado, su vector normal debe ser múltiplo del vector normal del plano dado, esto es,
+$$\begin{pmatrix}2x \\ 4y\\ 6z\end{pmatrix} = k \begin{pmatrix}1 \\ 4\\ 6\end{pmatrix}$$
+Luego,
+$$x = \dfrac{k}{2}, \qquad y = \dfrac{k}{4}, \qquad z = \dfrac{k}{2}$$
+Como es un plano paralelo a $x + 4y + 6z = 0$, será de la forma
+$$x + 4y + 6z = D$$
+Reemplazamos con los valores de $x,y,z$
+$$\left(\dfrac{k}{2}\right)^2 + 4\left(\dfrac{k}{4}\right)^2 + 6\left(\dfrac{k}{2}\right)^2$$
 \end{solucion}
 \item El cambio de variables 
 	$\begin{cases}
