Enunciado de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/enunciado.tex
+++ b/2019/2/MAT1620/9/enunciado.tex
@@ -120,8 +120,8 @@
 	$$1 - ln(2) + \dfrac{(ln2)^2}{2!}-\dfrac{(ln2)^3}{3!}+\cdots$$
 \item Evalúe la integral indefinida como una serie infinita
 	$$\int x\ \arctan(3x)dx$$
-\item Calcule
-$$\int_0^1 \dfrac{1-cos(x)}{x^2}$$
+\item Demuestre que
+$$\int_0^1 \dfrac{1-cos(x)}{x^2} = \sum\limits_{n=1} \dfrac{(-1)^n}{n!(2n-1)} $$
 \item Sea la función
 	$$f(x,y)=
 	\begin{cases}
