Solución de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/solucion.tex
+++ b/2019/2/MAT1620/9/solucion.tex
@@ -148,8 +148,8 @@ $$
 = \sum\limits_0^{\infty}(-1)^n \dfrac{9^n}{(2n+1)(2n+3)}x^{2n+3}dx
 $$
 \end{solucion}
-\item Calcule
-$$\int_0^1 \dfrac{1-cos(x)}{x^2}$$
+\item Demuestre que
+$$\int_0^1 \dfrac{1-cos(x)}{x^2} = \sum\limits_{n=1} \dfrac{(-1)^n}{n!(2n-1)} $$
 \begin{solucion}
 
 \end{solucion}
