--- a/2019/2/MAT1620/9/solucion.tex
+++ b/2019/2/MAT1620/9/solucion.tex
@@ -149,7 +149,7 @@ $$
 $$
 \end{solucion}
 \item Demuestre que
-$$\int_0^1 \dfrac{1-cos(x)}{x^2} = \sum\limits_{n=1} \dfrac{(-1)^n}{n!(2n-1)} $$
+$$\int_0^1 \dfrac{1-cos(x)}{x^2} = \sum\limits_{n=1} \dfrac{(-1)^n}{(2n)!(2n-1)} $$
 \begin{solucion}
 
 \end{solucion}
