Enunciado de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/enunciado.tex
+++ b/2019/2/MAT1620/9/enunciado.tex
@@ -117,7 +117,7 @@
 
 \begin{preguntas}
 \item Calcular la siguiente suma
-	$$1 - ln(2) + \dfrac{(ln2)^2}{2!}-\dfrac{(ln2)^3}{3!}+\cdots$$
+	$$1 - ln(2) + \dfrac{(ln(2))^2}{2!}-\dfrac{(ln(2))^3}{3!}+\cdots$$
 \item Evalúe la integral indefinida como una serie infinita
 	$$\int x\ \arctan(3x)dx$$
 \item Demuestre que
