Enunciado de 2019/2/MAT1620/9

--- a/2019/2/MAT1620/9/enunciado.tex
+++ b/2019/2/MAT1620/9/enunciado.tex
@@ -121,7 +121,7 @@
 \item Evalúe la integral indefinida como una serie infinita
 	$$\int x\ \arctan(3x)dx$$
 \item Demuestre que
-$$\int_0^1 \dfrac{1-cos(x)}{x^2} = \sum\limits_{n=1} \dfrac{(-1)^n}{(2n)!(2n-1)} $$
+$$\int_0^1 \dfrac{1-cos(x)}{x^2} = \sum\limits_{n=1} \dfrac{(-1)^{n+1}}{(2n)!(2n-1)} $$
 \item Sea la función
 	$$f(x,y)=
 	\begin{cases}
