Enunciado de 2019/2/MAT1620/10

--- a/2019/2/MAT1620/10/enunciado.tex
+++ b/2019/2/MAT1620/10/enunciado.tex
@@ -116,5 +116,6 @@
 \end{center}
 
 \begin{preguntas}
+\item Si $z^3 - xz - y = -2$, encuentre $\dfrac{\delta^2z}{\delta x \delta y}$ cuando $(x,y,z) = (-1, 0, -1)$.
 \end{preguntas}
 \end{document}
