Solución de 2019/2/MAT1620/10

--- a/2019/2/MAT1620/10/solucion.tex
+++ b/2019/2/MAT1620/10/solucion.tex
@@ -116,5 +116,9 @@
 \end{center}
 
 \begin{preguntas}
+\item Si $z^3 - xz - y = -2$, encuentre $\dfrac{\delta^2z}{\delta x \delta y}$ cuando $(x,y,z) = (-1, 0, -1)$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
