Solución de 2019/2/MAT1620/10

--- a/2019/2/MAT1620/10/solucion.tex
+++ b/2019/2/MAT1620/10/solucion.tex
@@ -120,5 +120,33 @@
 \begin{solucion}
 
 \end{solucion}
+\item Determine la gradiente de $f$, evalúela en el punto $P$ y encuentre la razón de cambio de $f$ en $P$ en la dirección del vector $u$.
+\begin{enumerate}[a)]
+\item $f(x,y) = sen(2x+3y)$\tab$P=(-6,4), u=\left(\sqrt[]{3}i - j\right)$
+\item $f(x,y) = \dfrac{y^2}{x}$\tab$P=(1,2), u=\left(2i + \sqrt[]{5}j\right)$
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
+\item Suponga que $f(x,y)$ es una función con derivadas parciales continuas en el punto $(1,1)$. Asumir que la derivada direccional en $(1,1)$ en la dirección $\langle3,4\rangle$ 			es 1 y en la dirección $\langle5,12\rangle$ es $-1$.
+\begin{enumerate}[a)]
+\item Encontrar la ecuación cartesiana del plano tangente en $(1,1,f(1,1))$.
+\item Encontrar la derivada direccional de $f(x,y)$ en $(1,1)$ en dirección al origen.	
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item 
+\item 
+\end{enumerate}
+\end{solucion}
+\item La temperatura en el punto $(x,y)$ de una lamina metálica viene dada por la función $T(x,y) = \dfrac{x}{x^2+y^2}$. Hallar la razón de crecimiento máximo de la temperatura en el punto $(3,4$) y la dirección en que ella ocurre.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
