Enunciado de 2019/2/MAT1620/10

--- a/2019/2/MAT1620/10/enunciado.tex
+++ b/2019/2/MAT1620/10/enunciado.tex
@@ -128,5 +128,10 @@
 \item Encontrar la derivada direccional de $f(x,y)$ en $(1,1)$ en dirección al origen.	
 \end{enumerate}
 \item La temperatura en el punto $(x,y)$ de una lamina metálica viene dada por la función $T(x,y) = \dfrac{x}{x^2+y^2}$. Hallar la razón de crecimiento máximo de la temperatura en el punto $(3,4$) y la dirección en que ella ocurre.
+\item Encuentre y clasifíque los puntos críticos de $f(x,y)=x^3+3xy^2-15x-12y$.
+\item Sea la función
+	$$f(x,y)=ax^2y+bxy^2+\dfrac{a^2y^2}{2}+2y$$
+	determine los valores de $a$ y $b$ para que la función posea un punto silla en $(1,1)$.
+	\item Hallar los valores extremos de $f(x,y) = x^2+2y^2-2x+3$ en el disco cerrado $x^2+y^2 \leq 10$.
 \end{preguntas}
 \end{document}
