--- a/2019/2/MAT1620/10/solucion.tex
+++ b/2019/2/MAT1620/10/solucion.tex
@@ -148,5 +148,16 @@
 \begin{solucion}
 
 \end{solucion}
+\item Encuentre y clasifíque los puntos críticos de $f(x,y)=x^3+3xy^2-15x-12y$.
+\begin{solucion}
+
+\end{solucion}
+\item Sea la función
+	$$f(x,y)=ax^2y+bxy^2+\dfrac{a^2y^2}{2}+2y$$
+	determine los valores de $a$ y $b$ para que la función posea un punto silla en $(1,1)$.
+	\item Hallar los valores extremos de $f(x,y) = x^2+2y^2-2x+3$ en el disco cerrado $x^2+y^2 \leq 10$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
