Solución de 2019/2/MAT1620/10

--- a/2019/2/MAT1620/10/solucion.tex
+++ b/2019/2/MAT1620/10/solucion.tex
@@ -170,7 +170,7 @@ Veamos ahora el ejercicio.\\
 Tenemos que
 $$f(x,y)=x^3+3xy^2-15x-12y$$
 Luego,
-$$\nabla f = \begin{pvector} 3x^2 + 3y^2 - 15 \\ 6xy - 12 \end{pvector} = \vec{0}$$
+$$\nabla f = \begin{pmatrix} 3x^2 + 3y^2 - 15 \\ 6xy - 12 \end{pmatrix} = \vec{0}$$
 Luego, tenemos que resolver
 $$3x^2 + 3y^2 - 15 = 0$$
 $$6xy - 12 = 0$$
