Enunciado de 2019/2/MAT1620/10

--- a/2019/2/MAT1620/10/enunciado.tex
+++ b/2019/2/MAT1620/10/enunciado.tex
@@ -116,7 +116,7 @@
 \end{center}
 
 \begin{preguntas}
-\item Si $z^3 - xz - y = -2$, encuentre $\dfrac{\delta^2z}{\delta x \delta y}$ cuando $(x,y,z) = (-1, 0, -1)$.
+\item Si $z^3 - xz - y = -2$, encuentre $\dfrac{\delta^2z}{\delta y \delta x}$ cuando $(x,y,z) = (-1, 0, -1)$.
 \item Determine la gradiente de $f$, evalúela en el punto $P$ y encuentre la razón de cambio de $f$ en $P$ en la dirección del vector $u$.
 \begin{enumerate}[a)]
 \item $f(x,y) = sen(2x+3y)$\tab$P=(-6,4), u=\left(\sqrt[]{3}i - j\right)$
