--- a/2019/2/MAT1620/10/solucion.tex
+++ b/2019/2/MAT1620/10/solucion.tex
@@ -116,8 +116,34 @@
 \end{center}
 
 \begin{preguntas}
-\item Si $z^3 - xz - y = -2$, encuentre $\dfrac{\delta^2z}{\delta x \delta y}$ cuando $(x,y,z) = (-1, 0, -1)$.
+\item Si $z^3 - xz - y = -2$, encuentre $\dfrac{\delta^2z}{\delta y \delta x}$ cuando $(x,y,z) = (-1, 0, -1)$.
 \begin{solucion}
+En primer lugar, notemos que lo que nos estan pidiendo es equivalente a $z_{xy}$ (mucho ojo con la notación).\\
+\\
+Tenemos que
+$$z^3 -xz -y = -2$$
+Derivamos en $x$,
+$$3z^2z_x - z - xz_x = 0$$
+Despejando,
+$$z_x = \dfrac{z}{3z^2 - x}$$
+Para obtener $z_{yx}$, derivamos la ecuación anterior (no la despejada) en $y$, es decir
+$$3z^2z_x - z - xz_x = 0$$
+Derivando,
+$$6zz_yz_x + 3z^2z_{xy} - z_y - xz_{xy} = 0$$
+Despejando,
+$$z_{xy} = \dfrac{z_y - 6zz_yz_x}{3z^2 -x}$$
+Notemos que para calcular el valor de $z_{xy}$, necesitamos también saber $z_y$, por lo que tomamos
+$$z^3 -xz -y = -2$$
+y derivamos en $y$,
+$$3z^2z_y - xz_y - 1 = 0$$
+Despejando,
+$$z_y = \dfrac{1}{3z^2 - x}$$
+Reemplazando con $(-1,0,1)$, tenemos que
+$$z_x(-1,0,-1) = \dfrac{-1}{3+1} = -\dfrac{1}{4}$$
+$$z_y(-1,0,-1) = \dfrac{1}{3+1} = \dfrac{1}{4}$$
+Luego, reemplazando con los valores obtenidos de $z_x$ y $z_y$,
+$$z_{xy}(-1,0,-1) = \dfrac{\dfrac{1}{4} - 6 \cdot (-1)\cdot \dfrac{1}{4} \cdot \left(-\dfrac{1}{4}\right)}{3\cdot (-1)^2 + 1} = -\dfrac{1}{32}$$
+
 
 \end{solucion}
 \item Determine la gradiente de $f$, evalúela en el punto $P$ y encuentre la razón de cambio de $f$ en $P$ en la dirección del vector $u$.
