--- a/2019/2/MAT1620/10/solucion.tex
+++ b/2019/2/MAT1620/10/solucion.tex
@@ -277,7 +277,6 @@ Si nos pidieran la razón de decrecimiento máximo, habría que cambiarle el sig
 \end{solucion}
 \item Encuentre y clasifíque los puntos críticos de $f(x,y)=x^3+3xy^2-15x-12y$.
 \begin{solucion}
-
 Para encontrar y clasificar los puntos críticos de una función, se debe hacer lo siguiente:\\
 
 Para clasificarlos, calculamos el gradiente de la función y lo igualamos a 0. Todos los puntos que cumplan con esta condición serán los puntos críticos.\\
@@ -327,7 +326,7 @@ $$P_1(1,2), \quad P_2(2,1), \quad P_3(-1,-2), \quad P_4(-2,-1)$$
 Calculemos ahora el determinante del Hessiano, es decir,
 $$H(x,y) = f_{xx}f_{yy} - f_{xy}^2$$
 Notemos que
-$$f_{xx} = 6x, \quad f_{yy} = 6x,\quad f_{xy} = 6y$$
+$$f_{xx} = 6x \quad f_{yy} = 6x \quad f_{xy} = 6y$$
 Luego,
 $$H(x,y) = 36(x^2-y^2)$$
 Finalmente,
