Solución de 2019/2/MAT1620/10

--- a/2019/2/MAT1620/10/solucion.tex
+++ b/2019/2/MAT1620/10/solucion.tex
@@ -322,7 +322,7 @@ $$x(-3-x) = 2 \ra x^2+3x+2=0 \ra (x+1)(x+2) = 0$$
 De aqui tenemos que $x_3 = -1 \ra y_3 = -2$ y $x_4 = -2 \ra y_4 = -1$, por lo que $P_3(-1,-2)$ y $P_4(-2,-1)$.\\
 \\
 Entonces, los puntos críticos son
-$$P_1(1,2), \quad P_2(2,1), \quad P_3(-1,-2), \quad P_4(-2,-1)$$
+$$P_1(1,2) \quad P_2(2,1) \quad P_3(-1,-2) \quad P_4(-2,-1)$$
 Calculemos ahora el determinante del Hessiano, es decir,
 $$H(x,y) = f_{xx}f_{yy} - f_{xy}^2$$
 Notemos que
