--- a/2019/2/MAT1620/11/enunciado.tex
+++ b/2019/2/MAT1620/11/enunciado.tex
@@ -116,5 +116,9 @@
 \end{center}
 
 \begin{preguntas}
+\item Hallar los valores extremos de $f(x,y) = x^2+2y^2-2x+3$ en el disco cerrado $x^2+y^2 \leq 10$.
+\item Determine el máximo y el mínimo valor que alcanza la expresión $z=x^2-4xy-y^2+2y$, para $x\geq0;\quad y\geq0;\quad x+y\leq2$.
+\item Hallar el punto más cercano al origen de la curva definida por las siguientes ecuaciones
+	$$x^2-xy+y^2-z^2=1,\qquad x^2+y^2=1$$
 \end{preguntas}
 \end{document}
