Enunciado de 2019/2/MAT1620/11

--- a/2019/2/MAT1620/11/enunciado.tex
+++ b/2019/2/MAT1620/11/enunciado.tex
@@ -120,5 +120,23 @@
 \item Determine el máximo y el mínimo valor que alcanza la expresión $z=x^2-4xy-y^2+2y$, para $x\geq0;\quad y\geq0;\quad x+y\leq2$.
 \item Hallar el punto más cercano al origen de la curva definida por las siguientes ecuaciones
 	$$x^2-xy+y^2-z^2=1,\qquad x^2+y^2=1$$
+\item Resolver las siguientes integrales múltiples
+\begin{tasks}(2)
+\task $\displaystyle\int_2^4 \displaystyle\int_1^2 ye^{xy}dxdy$
+\task $\displaystyle\int_{-1}^1\displaystyle\int_{-1}^1 \dfrac{xy}{1+x^2+y^2}dxdy$
+\end{tasks}
+\item Calcule
+	$$ \displaystyle\int_0^1 \dfrac{x^b - x^a}{log\ x}dx$$
+	sabiendo que $\displaystyle\int_a^b x^y dy = \dfrac{x^b - x^a}{log\ x}$.
+\item Dibuje la región de integración de $\displaystyle\int_0^1 \displaystyle\int_x^{2x} dydx$ y luego cambie el orden de integración.
+\item Evalúe la integral $\displaystyle\int_1^2 \displaystyle\int_x^{x^2} 12x dydx$ y luego dibuje la región de integración y exprese la integral en el orden $dxdy$. Integre nuevamente.
+\item Calcule la integral doble $\displaystyle\iint\limits_R e^{x/y} dA$ donde $R$ es la región en $\R^2$ encerrada por las curvas $y=\sqrt[]{x}$ e $y=\sqrt[3]{x}$.
+\item Cambie el orden de integración y calcule cuando sea posible
+\begin{tasks}(2)
+\task $\displaystyle\int_0^1 \displaystyle\int_0^{\sqrt[]{x}} \dfrac{2xy}{1-y^4} dydx$
+\task $\displaystyle\int_0^1 \displaystyle\int_{z^2}^z ze^{-y^2} dydz$
+\task $\displaystyle\int_0^1 \displaystyle\int_{arcsen(y)}^{\pi/2} cos(x)\ \sqrt[]{1+cos^2(x)} dxdy$
+\task $\displaystyle\int_0^1 \displaystyle\int_{\sqrt[]{x}}^1 \dfrac{x}{\sqrt[]{x^2+y^2}} dydx$
+\end{tasks}
 \end{preguntas}
 \end{document}
